[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
xmas-elf = "0.7.0"
easy-fs = { path = "../easy-fs" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }

[profile.release]
debug = true